org_unpackaged/standard/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Client Contract</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closing</fullName>
        </values>
        <values>
            <fullName>Developing</fullName>
        </values>
        <values>
            <fullName>Dropped</fullName>
        </values>
        <values>
            <fullName>Operation</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Opportunity Management Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Deferred</fullName>
        </values>
        <values>
            <fullName>Identifying</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Work Order</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <inlineHelpText>Select the AM for this account</inlineHelpText>
        <label>Account Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Shannon Daly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emily Dyche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heather Rocco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Cavaluzzi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brendan Dillon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenna Powell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimball Norup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Putt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Taggart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackie Crook</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <description>Part of the DUTCHMAN sales process</description>
        <inlineHelpText>Explain who has the authority on deciding for this opportunity; the decision making process</inlineHelpText>
        <label>Authority</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Tier__c</fullName>
        <formula>TEXT(rs_client__r.Tier__c)</formula>
        <label>Client Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <description>Part of the DUTCHMAN sales process</description>
        <inlineHelpText>Select the competition we have for this opportunity</inlineHelpText>
        <label>Competition</label>
        <picklist>
            <picklistValues>
                <fullName>Do nothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Take the risk themselves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allbany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collabarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Chaos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workforce Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearpath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure Talent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volt</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Credit_worthiness__c</fullName>
        <description>Decides the credit status</description>
        <formula>TEXT(Account.Credit_Worthiness__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Select the status of the credit check</inlineHelpText>
        <label>Credit worthiness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_credit_check__c</fullName>
        <description>Historical date</description>
        <formula>Account.Date_of_credit_check__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date the credit check occurred</inlineHelpText>
        <label>Date of credit check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Criteria__c</fullName>
        <description>Part of the DUTCHMAN sales process</description>
        <inlineHelpText>Explain what the client is going to consider to make their decision</inlineHelpText>
        <label>Decision Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Kickoff__c</fullName>
        <description>A benchmark date</description>
        <inlineHelpText>The date planned to have the implementation team involved</inlineHelpText>
        <label>Discovery Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dropped_Reason__c</fullName>
        <description>Allows the user to enter a reason for dropping the opportunity</description>
        <inlineHelpText>Enter the reason for dropping the opportunity</inlineHelpText>
        <label>Dropped Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Final_Confirmation_meeting__c</fullName>
        <description>Benchmark date</description>
        <inlineHelpText>The date of the meeting to ensure the client wants to give us the deal</inlineHelpText>
        <label>Final Confirmation meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_to_solve__c</fullName>
        <description>Part of the DUTCHMAN sales process</description>
        <inlineHelpText>The associate types we are going to enroll</inlineHelpText>
        <label>How to solve</label>
        <picklist>
            <picklistValues>
                <fullName>Commissioned Professional (EXEC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant (EXEC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelancer (EXEC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Contractor (EXEC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroller (STAFF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readiness to Serve (STAFF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Consulting Firms (SUB)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Money_Client_budget__c</fullName>
        <description>Part of the DUTCHMAN sales process</description>
        <inlineHelpText>The clients funding strategy</inlineHelpText>
        <label>Money / Client budget</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <description>Part of the DUTCHMAN sales process</description>
        <inlineHelpText>The need for our solution</inlineHelpText>
        <label>Need</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_competition__c</fullName>
        <description>Part of the DUTCHMAN sales process</description>
        <inlineHelpText>Only use if other is selected as a form of competition.  Enter what the competition is here</inlineHelpText>
        <label>New competition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presentation_Date__c</fullName>
        <description>Benchmark</description>
        <inlineHelpText>The date we plan on presenting to the client</inlineHelpText>
        <label>Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_start__c</fullName>
        <description>Benchmark</description>
        <inlineHelpText>Estimated date new enrollments will begin</inlineHelpText>
        <label>Program start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Progressive_ICs__c</fullName>
        <description>Forecast of size of deal</description>
        <formula>TotalOpportunityQuantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The average net new IC&apos;s enrolled across every solution over each month of the progressive state</inlineHelpText>
        <label>Progressive ICs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Progressive_Length__c</fullName>
        <description>Part of the forecast of the size of the deal</description>
        <inlineHelpText>The # of months of ramp-up needed</inlineHelpText>
        <label>Progressive Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Progressive_Monthly_Management_Fee__c</fullName>
        <description>Part of the estimate of the size of the deal</description>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The average monthly management fee from every solution over each month of the progressive state</inlineHelpText>
        <label>Progressive Monthly Management Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Progressive_Monthly_Spend__c</fullName>
        <description>Part of the estimate of the size of the deal</description>
        <inlineHelpText>The average monthly spend from everyone solution over each month of the progressive state</inlineHelpText>
        <label>Progressive Monthly Spend</label>
        <summarizedField>OpportunityLineItem.Progressive_Spend__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Progressive_Monthly_Weighted_Fee__c</fullName>
        <description>Part of the estimate of the size of the deal</description>
        <formula>Amount  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The average monthly revenue from every solution over each month of the progressive state</inlineHelpText>
        <label>Progressive Monthly Weighted Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <inlineHelpText>Select the PM for this opportunity</inlineHelpText>
        <label>Project Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Steve Arhancet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Cassar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amy Chatterton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patrick Nealon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heather Rocco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dustin Talley</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RFP_Date_Received__c</fullName>
        <description>Benchmark</description>
        <inlineHelpText>Enter the date we received the RFP</inlineHelpText>
        <label>RFP Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Response_Due__c</fullName>
        <description>Benchmark</description>
        <inlineHelpText>Enter the date the RFP is due</inlineHelpText>
        <label>RFP Response Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Loss__c</fullName>
        <description>Part of the close of the deal</description>
        <inlineHelpText>Explain the reason for our loss</inlineHelpText>
        <label>Reason for Loss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Security_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Security Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Steady_State_ICs__c</fullName>
        <description>Part of the estimate of the size of the deal</description>
        <formula>TotalOpportunityQuantity  *  Progressive_Length__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of IC&apos;s enrolled from every solution at a steady state</inlineHelpText>
        <label>Steady State ICs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Steady_State_Monthly_Management_Fee__c</fullName>
        <description>Part of the estimate of the size of the deal</description>
        <formula>Amount  *  Progressive_Length__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The monthly income from every solution at a steady state</inlineHelpText>
        <label>Steady State Monthly Management Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Steady_State_Monthly_Spend__c</fullName>
        <description>Part of the estimate of the size of the deal</description>
        <formula>Progressive_Monthly_Spend__c  *  Progressive_Length__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The monthly IC spend from every solution at a steady state</inlineHelpText>
        <label>Steady State Monthly Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Steady_State_Weighted_Monthly_Fee__c</fullName>
        <description>Part of the estimate of the size of the deal</description>
        <formula>Amount   *  Probability *  Progressive_Length__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The monthly revenue from every solution at a steady state</inlineHelpText>
        <label>Steady State Weighted Monthly Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Steady_State__c</fullName>
        <description>Benchmark</description>
        <formula>Program_start__c +  (Progressive_Length__c *(365.24/12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date we are expected to reach the steady state</inlineHelpText>
        <label>Steady State</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timeframe_of_decision__c</fullName>
        <description>Part of the DUTCHMAN sales process</description>
        <inlineHelpText>The estimated date of the decision</inlineHelpText>
        <label>Timeframe of decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_differentiators__c</fullName>
        <description>Part of the DUTCHMAN sales process</description>
        <inlineHelpText>Our competitive advantage</inlineHelpText>
        <label>Unique differentiators</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fd_billingChangeDate__c</fullName>
        <label>Billing Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_deferralDate__c</fullName>
        <label>Deferral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_expectedInvoiceDate__c</fullName>
        <label>Expected 1st Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_stageChangeDate__c</fullName>
        <label>Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fn_billing__c</fullName>
        <inlineHelpText>Updated by the MBO System</inlineHelpText>
        <label>Billings to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_expected6moBilling__c</fullName>
        <label>Expected Billings 1st 6 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fn_expectedSteadyMonthlyBilling__c</fullName>
        <label>Expected Steady State Monthly Billing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fn_expectedTimeToSteady__c</fullName>
        <label>Expected Time To Reach Steady State</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_expectedTransitions__c</fullName>
        <label>Expected New Transitions in 1st 6 Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_pAllowedCost__c</fullName>
        <label>Maximum Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fn_pUnitAllowed__c</fullName>
        <label>Primary Units Allowed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_pUnitCompleted__c</fullName>
        <label>Jobs/Hours Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_pUnitCost__c</fullName>
        <label>Primary Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fn_sUnitCompleted__c</fullName>
        <label>Overtime Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_sUnitCost__c</fullName>
        <label>Secondary Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fn_stageAge__c</fullName>
        <formula>IF(
   NOT(ISBLANK(fd_stageChangeDate__c)),
   TODAY() - fd_stageChangeDate__c,
   TODAY() - DATEVALUE(CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fs_accountFirstName__c</fullName>
        <formula>Account.FirstName</formula>
        <label>Account First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_advance__c</fullName>
        <label>Allow Advances</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_allowedExpense__c</fullName>
        <label>Maximum Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fs_associateEmail__c</fullName>
        <label>Associate Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fs_billFee__c</fullName>
        <label>Billing Fee</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_city__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_clientEmail__c</fullName>
        <label>Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fs_country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_endStatus__c</fullName>
        <inlineHelpText>Updated by the MBO System</inlineHelpText>
        <label>End Date Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed - will end on date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed - will be extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed - will get new WO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_endType__c</fullName>
        <inlineHelpText>Updated by the MBO System</inlineHelpText>
        <label>End Date Type</label>
        <picklist>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Estimate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_mboRecordId__c</fullName>
        <externalId>true</externalId>
        <label>MBO Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_pONumber__c</fullName>
        <label>Purchase Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_pendingAssociateFirst__c</fullName>
        <formula>rs_leadAssociate__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Associate First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_postalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_pricingType__c</fullName>
        <label>Pricing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual-rate Hourly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_sUnitAllowed__c</fullName>
        <label>Secondary Units Allowed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fs_serviceFee__c</fullName>
        <label>Service Fee Override</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_stageReason__c</fullName>
        <label>Stage Reason</label>
        <picklist>
            <controllingField>fs_subStage__c</controllingField>
            <picklistValues>
                <fullName>Better Suited for Direct Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostile Partnering Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incumbent Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Executive Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Looking for Low Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO Exec Not Understood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP/VMS Strategy Not Associate Friendly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship to Winner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worker Classification</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>fs_state__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_street1__c</fullName>
        <label>Street 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_street2__c</fullName>
        <label>Street 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_subStage__c</fullName>
        <label>Sub-stage</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Could Not Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_wMAssignmentID__c</fullName>
        <label>Work Market Assignment ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_wOID__c</fullName>
        <label>MBO Work Order ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_wmAssignmentURL__c</fullName>
        <formula>&apos;http://www.workmarket.com/assignments/details/&apos;+fs_wMAssignmentID__c</formula>
        <label>Work Market Assignment URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_wmCompanyId__c</fullName>
        <label>WM Company ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_woEnd__c</fullName>
        <inlineHelpText>Updated by the MBO System</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fs_woStart__c</fullName>
        <inlineHelpText>Updated by the MBO System</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>myTeam__c</fullName>
        <formula>Owner.ManagerId =  $User.Id</formula>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rs_accountExecutive__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Executive</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Updated by the MBO System</inlineHelpText>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>workOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_leadAssociate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pending Associate</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>workOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllContractsActive</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Client_Contract</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Sold</value>
        </filters>
        <label>All Contracts - Active</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContractsLost</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Client_Contract</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Lost</value>
        </filters>
        <label>All Contracts - Lost</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContractsMisc</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Client_Contract</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Active,Pending</value>
        </filters>
        <label>All Contracts - Misc</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContractsPending</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Client_Contract</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Identifying,Deferred,Working</value>
        </filters>
        <label>All Contracts - Pending</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
</CustomObject>